<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>QVOptionsDialog</class>
 <widget class="QDialog" name="QVOptionsDialog">
  <property name="windowModality">
   <enum>Qt::NonModal</enum>
  </property>
  <property name="windowTitle">
   <string>qView Options</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QTabWidget" name="tabWidget">
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
     </property>
     <property name="currentIndex">
      <number>1</number>
     </property>
     <widget class="QWidget" name="window">
      <property name="layoutDirection">
       <enum>Qt::LeftToRight</enum>
      </property>
      <attribute name="title">
       <string>Window</string>
      </attribute>
      <layout class="QFormLayout" name="formLayout">
       <item row="0" column="0">
        <widget class="QCheckBox" name="bgColorCheckbox">
         <property name="text">
          <string>Use background color</string>
         </property>
         <property name="checked">
          <bool>true</bool>
         </property>
         <property name="tristate">
          <bool>false</bool>
         </property>
        </widget>
       </item>
       <item row="1" column="0">
        <layout class="QHBoxLayout" name="bgColorLayout">
         <item>
          <widget class="QLabel" name="bgColorLabel">
           <property name="enabled">
            <bool>true</bool>
           </property>
           <property name="text">
            <string>Background color:</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="bgColorButton">
           <property name="enabled">
            <bool>true</bool>
           </property>
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="focusPolicy">
            <enum>Qt::NoFocus</enum>
           </property>
           <property name="text">
            <string/>
           </property>
           <property name="autoDefault">
            <bool>true</bool>
           </property>
           <property name="default">
            <bool>false</bool>
           </property>
           <property name="flat">
            <bool>false</bool>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item row="2" column="0">
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>40</width>
           <height>10</height>
          </size>
         </property>
        </spacer>
       </item>
       <item row="5" column="0">
        <widget class="QCheckBox" name="menubarCheckbox">
         <property name="text">
          <string>Show menubar</string>
         </property>
        </widget>
       </item>
       <item row="4" column="0">
        <layout class="QHBoxLayout" name="horizontalLayout">
         <property name="leftMargin">
          <number>0</number>
         </property>
         <property name="topMargin">
          <number>0</number>
         </property>
         <item>
          <widget class="QLabel" name="label">
           <property name="toolTip">
            <string>Changes the amount of information displayed in the titlebar</string>
           </property>
           <property name="text">
            <string>Titlebar text:</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QComboBox" name="titlebarModeComboBox">
           <property name="toolTip">
            <string>Changes the amount of information displayed in the titlebar</string>
           </property>
           <item>
            <property name="text">
             <string>Basic</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Minimal</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Verbose</string>
            </property>
           </item>
          </widget>
         </item>
        </layout>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="image">
      <attribute name="title">
       <string>Image</string>
      </attribute>
      <layout class="QFormLayout" name="formLayout_2">
       <item row="0" column="0">
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
          <widget class="QLabel" name="label_3">
           <property name="toolTip">
            <string>The amount to zoom every scroll wheel click</string>
           </property>
           <property name="text">
            <string>Zoom amount:</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QSpinBox" name="scaleFactorSpinBox">
           <property name="toolTip">
            <string>The amount to zoom every scroll wheel click</string>
           </property>
           <property name="suffix">
            <string>%</string>
           </property>
           <property name="minimum">
            <number>5</number>
           </property>
           <property name="maximum">
            <number>200</number>
           </property>
           <property name="singleStep">
            <number>5</number>
           </property>
           <property name="value">
            <number>25</number>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item row="1" column="0">
        <widget class="QCheckBox" name="filteringCheckbox">
         <property name="toolTip">
          <string>Turn this off to see individual pixels</string>
         </property>
         <property name="text">
          <string>Bilinear filtering</string>
         </property>
         <property name="checked">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="2" column="0">
        <widget class="QCheckBox" name="scalingCheckbox">
         <property name="toolTip">
          <string>Images appear aliased (having jagged edges) without this, but it is faster</string>
         </property>
         <property name="text">
          <string>Image scaling</string>
         </property>
         <property name="checked">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="3" column="0">
        <widget class="QCheckBox" name="scalingTwoCheckbox">
         <property name="toolTip">
          <string>Choose whether or not the image continues to be scaled when zooming above the window size (can be laggy with large images)</string>
         </property>
         <property name="text">
          <string>Scaling above window size</string>
         </property>
         <property name="checked">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="4" column="0">
        <spacer name="horizontalSpacer_2">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>40</width>
           <height>20</height>
          </size>
         </property>
        </spacer>
       </item>
       <item row="5" column="0">
        <widget class="QCheckBox" name="resetOnResizeCheckbox">
         <property name="toolTip">
          <string>Controls if the image is resized and centered with the window or not</string>
         </property>
         <property name="text">
          <string>Window resizing resizes image</string>
         </property>
         <property name="checked">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="7" column="0">
        <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
          <widget class="QLabel" name="cropModeLabel">
           <property name="toolTip">
            <string>Ignores select sides of an image when fitting to window (some sides will extend beyond the window boundaries)</string>
           </property>
           <property name="text">
            <string>Crop away edges:</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QComboBox" name="cropModeComboBox">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="toolTip">
            <string>Ignores select sides of an image when fitting to window (some sides will extend beyond the window boundaries)</string>
           </property>
           <item>
            <property name="text">
             <string>None</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Vertical</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Horizontal</string>
            </property>
           </item>
          </widget>
         </item>
        </layout>
       </item>
       <item row="6" column="0">
        <widget class="QCheckBox" name="pastActualSizeCheckbox">
         <property name="toolTip">
          <string>Stop from resizing the image past its actual size - you can still zoom past it though</string>
         </property>
         <property name="text">
          <string>Image resizes past actual size</string>
         </property>
         <property name="checked">
          <bool>true</bool>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="slideshow">
      <attribute name="title">
       <string>Slideshow</string>
      </attribute>
      <layout class="QFormLayout" name="formLayout_3">
       <item row="0" column="0">
        <layout class="QHBoxLayout" name="horizontalLayout_4">
         <item>
          <widget class="QLabel" name="label_4">
           <property name="text">
            <string>Slideshow direction</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QComboBox" name="slideshowDirectionComboBox">
           <item>
            <property name="text">
             <string>Forward</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Backward</string>
            </property>
           </item>
          </widget>
         </item>
        </layout>
       </item>
       <item row="1" column="0">
        <layout class="QHBoxLayout" name="horizontalLayout_5">
         <item>
          <widget class="QLabel" name="label_5">
           <property name="text">
            <string>Slideshow timer:</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QSpinBox" name="slideshowTimerSpinBox">
           <property name="suffix">
            <string> sec</string>
           </property>
           <property name="minimum">
            <number>1</number>
           </property>
           <property name="maximum">
            <number>999</number>
           </property>
           <property name="value">
            <number>5</number>
           </property>
          </widget>
         </item>
        </layout>
       </item>
      </layout>
     </widget>
    </widget>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Apply|QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>QVOptionsDialog</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>248</x>
     <y>254</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>QVOptionsDialog</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>316</x>
     <y>260</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
